src/objects/Competitor_Information__c.object
<CustomObject>
    <description>Junction object for use in analyzing competitors for account plans</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>Competitor_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Team__c</fullName>
        <inlineHelpText>AECOM team, e.g., EBL, EMEA, Upstream</inlineHelpText>
        <label>Account Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Firm__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup into Accounts</description>
        <inlineHelpText>Select from Accounts. If not found: (1) Right click on the Accounts tab and open in a new window. (2) Enter the Account Name, Client Group/Subgroup, and Country – then click Save. (3) Return to this page and search for the Account you just entered.</inlineHelpText>
        <label>Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitive Information</relationshipLabel>
        <relationshipName>Competitor_Information</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Notes__c</fullName>
        <inlineHelpText>Enter details specific to this competitor related to this account</inlineHelpText>
        <label>Competitor Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fit__c</fullName>
        <inlineHelpText>1 = fits somewhere
10 =viewed as critical to future plans; a partner</inlineHelpText>
        <label>Fit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_to_Leverage_Mitigate__c</fullName>
        <inlineHelpText>Ways to leverage or mitigate each strength and weakness.</inlineHelpText>
        <label>How to Leverage/Mitigate</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_well_do_we_compete_with_this_Firm__c</fullName>
        <description>How well do we compete with this firm? 
e.g.,  alignment client needs, knowledge of client, relationship, share of wallet</description>
        <inlineHelpText>How well do we compete with this firm? 
e.g.,  alignment client needs, knowledge of client, relationship, share of wallet</inlineHelpText>
        <label>How well do we compete with this Firm?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Knowledge__c</fullName>
        <inlineHelpText>1 = limited, just completed the project at hand
10 = well informed; client openly shares concerns &amp;  drivers</inlineHelpText>
        <label>Knowledge</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perception__c</fullName>
        <inlineHelpText>1 = a big headache
10 = working with them is easy</inlineHelpText>
        <label>Perception</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Positioning__c</fullName>
        <inlineHelpText>1 = limited points of contact
10 =all bases well covered; relationships at all levels</inlineHelpText>
        <label>Positioning</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <inlineHelpText>1 = limited exposure
10 = working contribution to business issues</inlineHelpText>
        <label>Relationship</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Share_of_wallet__c</fullName>
        <inlineHelpText>1 = declining
10 = significant and increasing</inlineHelpText>
        <label>Share of wallet</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>Relationship__c +  Knowledge__c +  Fit__c +  Positioning__c +  Perception__c +  Share_of_wallet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total of all score fields</inlineHelpText>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Competitive Landscape</label>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Competitive Landscape ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Landscape</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Scores_between_1_and_10</fullName>
        <active>true</active>
        <description>Requires competitor information scores to be &gt; 0 and &lt; 11</description>
        <errorConditionFormula>Relationship__c &gt; 10  || Relationship__c &lt; 1 ||
Knowledge__c &gt; 10  || Knowledge__c &lt; 1 ||
Fit__c &gt; 10  || Fit__c &lt; 1 ||
Positioning__c &gt; 10  || Positioning__c &lt; 1 ||
Perception__c &gt; 10  || Perception__c &lt; 1 ||
Share_of_wallet__c &gt; 10  || Share_of_wallet__c &lt; 1</errorConditionFormula>
        <errorMessage>All scores must be greater than 0 and less than 11</errorMessage>
    </validationRules>
</CustomObject>